--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "10.0.7",
-    "react": "17.0.1",
+    "mongodb": "^6.10.0",
+    "next": "^12.3.4",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "17.0.1"
+    "react-dom": "^17.0.2"
   }
 }
