--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^10.1.3"
   }
 }
